# python-autotests

./: .dockerignore  .gitignore  Dockerfile  NOTES.md  README.md  TASKS.md  docker-compose.yml  pyproject.toml
config/: .env.example  config.py
docs/: how-i-built-the-framework.md
learning/: 00_interview_cheatsheet.md  01_python_language.md  02_api_testing.md  03_ui_testing.md  docker.md
tests/: conftest.py
tests/api/: conftest.py  models.py  test_data.py  test_register.py  test_resources.py  test_users.py
tests/api/checks/: auth_checks.py  base_api_checks.py  resource_checks.py  user_checks.py
tests/ui/: conftest.py  test_courses.py  test_data.py  test_enrollment_form.py  test_footer.py  test_main_page.py  test_navigation.py  test_user_flow.py
tests/ui/checks/: courses_checks.py  footer_checks.py  form_checks.py  header_checks.py  main_page_checks.py
tests/ui/locators/: courses_locators.py  footer_locators.py  form_locators.py  header_locators.py  main_page_locators.py
tests/ui/pages/: base_page.py  courses_page.py  footer_page.py  form_page.py  header_page.py  main_page.py
utils/: api_client.py  helpers.py
